[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
atrium-api = "0.20.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["macros", "rt"] }
worker = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
atrium-xrpc-client = { version = "0.5.1", default-features = false, features = ["reqwest"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atrium-xrpc-client = "0.5.1"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
