[package]
name = "bsky-timemachine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.80"
base64 = "0.22.0"
bs58 = "0.5.1"
chrono = "0.4.38"
ecdsa = { version = "0.16.9", features = ["verifying"] }
getrandom = { version = "0.2.14", features = ["js"] }
http = "1.1.0"
k256 = "0.13.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
worker = "0.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
atrium-api = { version = "0.20.1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atrium-api = { version = "0.20.1" }
atrium-xrpc-client = "0.5.2"
tokio = { version = "1.37.0", features = ["macros", "rt"] }

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
